--- a/app/modules/sk_persetujuan_mempelai/config/properties.yml
+++ b/app/modules/sk_persetujuan_mempelai/config/properties.yml
@@ -1,10 +1,10 @@
 properties:
-    fields: [no_kel, date, 'no', ttd_nama, ttd_nip, ttd_jabatan, create_on, update_on, create_by, update_by, syarat, cs_nama, cs_alias, cs_bin, cs_tempat_lahir, cs_tanggal_lahir, cs_kewarganegaraan, cs_agama, cs_pekerjaan, cs_tempat_tinggal, ci_nama, ci_alias, ci_binti, ci_tempat_lahir, ci_tanggal_lahir, ci_kewarganegaraan, ci_agama, ci_pekerjaan, ci_tempat_tinggal]
     tablePk: sk_persetujuan_mempelaiid
     tableName: t_sk_persetujuan_mempelai
+    fields: [id,no_prop,no_kab,no_kec,no_kel,date,'no',ttd_nama,ttd_nip,ttd_jabatan,file,download,archive,create_on,update_on,create_by,update_by,syarat,status_doc,cs_nama,cs_alias,cs_nik,cs_bin,cs_tempat_lahir,cs_tanggal_lahir,cs_kewarganegaraan,cs_agama,cs_pekerjaan,cs_alamat_a,cs_alamat_b,ci_nama,ci_alias,ci_nik,ci_binti,ci_tempat_lahir,ci_tanggal_lahir,ci_kewarganegaraan,ci_agama,ci_pekerjaan,ci_alamat_a,ci_alamat_b]
     autosetPostKeys: 
-        add: [no_kel,date,ttd_nama,ttd_nip,ttd_jabatan,create_on,create_by,syarat,status_doc,cs_nama,cs_alias,cs_bin,cs_tempat_lahir,cs_tanggal_lahir,cs_kewarganegaraan,cs_agama,cs_pekerjaan,cs_tempat_tinggal,ci_nama,ci_alias,ci_binti,ci_tempat_lahir,ci_tanggal_lahir,ci_kewarganegaraan,ci_agama,ci_pekerjaan,ci_tempat_tinggal]
-        edit: [no_kel,date,ttd_nama,ttd_nip,ttd_jabatan,update_on,update_by,syarat,status_doc,cs_nama,cs_alias,cs_bin,cs_tempat_lahir,cs_tanggal_lahir,cs_kewarganegaraan,cs_agama,cs_pekerjaan,cs_tempat_tinggal,ci_nama,ci_alias,ci_binti,ci_tempat_lahir,ci_tanggal_lahir,ci_kewarganegaraan,ci_agama,ci_pekerjaan,ci_tempat_tinggal] 
+        add: [no_kel,date,'no',ttd_nama,ttd_nip,ttd_jabatan,create_on,create_by,syarat,status_doc,cs_nama,cs_alias,cs_nik,cs_bin,cs_tempat_lahir,cs_tanggal_lahir,cs_kewarganegaraan,cs_agama,cs_pekerjaan,cs_alamat_a,cs_alamat_b,ci_nama,ci_alias,ci_nik,ci_binti,ci_tempat_lahir,ci_tanggal_lahir,ci_kewarganegaraan,ci_agama,ci_pekerjaan,ci_alamat_a,ci_alamat_b]
+        edit: [no_kel,date,'no',ttd_nama,ttd_nip,ttd_jabatan,update_on,update_by,syarat,status_doc,cs_nama,cs_alias,cs_nik,cs_bin,cs_tempat_lahir,cs_tanggal_lahir,cs_kewarganegaraan,cs_agama,cs_pekerjaan,cs_alamat_a,cs_alamat_b,ci_nama,ci_alias,ci_nik,ci_binti,ci_tempat_lahir,ci_tanggal_lahir,ci_kewarganegaraan,ci_agama,ci_pekerjaan,ci_alamat_a,ci_alamat_b] 
     dateFields: [date,cs_tanggal_lahir,ci_tanggal_lahir]
     currentDateFields: [create_on, update_on]
     syaratFields: [syarat]
