--- a/properties.yml
+++ b/properties.yml
@@ -1,5 +1,5 @@
-	fields: [id,no_prop,no_kab,no_kec,no_kel,date,'no',ttd_nama,ttd_nip,ttd_jabatan,file,download,archive,create_on,update_on,create_by,update_by,syarat,s_nama,i_nama,tanggal_acara,waktu_acara,tempat_acara,syarat_a,syarat_b,tanggal_terima,nama_kepala_kua,nama_pemohon,lokasi_yth]
+	fields: [id,no_prop,no_kab,no_kec,no_kel,date,'no',ttd_nama,ttd_nip,ttd_jabatan,file,download,archive,create_on,update_on,create_by,update_by,syarat,status_doc,cs_nama,cs_alias,cs_nik,cs_bin,cs_tempat_lahir,cs_tanggal_lahir,cs_kewarganegaraan,cs_agama,cs_pekerjaan,cs_alamat_a,cs_alamat_b,ci_nama,ci_alias,ci_nik,ci_binti,ci_tempat_lahir,ci_tanggal_lahir,ci_kewarganegaraan,ci_agama,ci_pekerjaan,ci_alamat_a,ci_alamat_b]
 	autosetPostKeys: 
-	    add: [no_kel,date,'no',ttd_nama,ttd_nip,ttd_jabatan,create_on,create_by,syarat,s_nama,i_nama,tanggal_acara,waktu_acara,tempat_acara,syarat_a,syarat_b,tanggal_terima,nama_kepala_kua,nama_pemohon,lokasi_yth]
-	    edit: [no_kel,date,'no',ttd_nama,ttd_nip,ttd_jabatan,update_on,update_by,syarat,s_nama,i_nama,tanggal_acara,waktu_acara,tempat_acara,syarat_a,syarat_b,tanggal_terima,nama_kepala_kua,nama_pemohon,lokasi_yth] 
-	dateFields: [date,tanggal_acara,tanggal_terima]
+	    add: [no_kel,date,'no',ttd_nama,ttd_nip,ttd_jabatan,create_on,create_by,syarat,status_doc,cs_nama,cs_alias,cs_nik,cs_bin,cs_tempat_lahir,cs_tanggal_lahir,cs_kewarganegaraan,cs_agama,cs_pekerjaan,cs_alamat_a,cs_alamat_b,ci_nama,ci_alias,ci_nik,ci_binti,ci_tempat_lahir,ci_tanggal_lahir,ci_kewarganegaraan,ci_agama,ci_pekerjaan,ci_alamat_a,ci_alamat_b]
+	    edit: [no_kel,date,'no',ttd_nama,ttd_nip,ttd_jabatan,update_on,update_by,syarat,status_doc,cs_nama,cs_alias,cs_nik,cs_bin,cs_tempat_lahir,cs_tanggal_lahir,cs_kewarganegaraan,cs_agama,cs_pekerjaan,cs_alamat_a,cs_alamat_b,ci_nama,ci_alias,ci_nik,ci_binti,ci_tempat_lahir,ci_tanggal_lahir,ci_kewarganegaraan,ci_agama,ci_pekerjaan,ci_alamat_a,ci_alamat_b] 
+	dateFields: [date,cs_tanggal_lahir,ci_tanggal_lahir]
